--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,9 +20,57 @@
                 <i class="fa-solid fa-person header-icon"></i>
                 <h1>Minha área</h1>
             </div>
-            
         </div>
     </header>
+    <section class="background-color-secondary">
+      <div class="container-fluid d-flex justify-content-center">
+        <h1 class="looking-for-home">Estou procurando um lar</h1>
+      </div>
+      <div class="container-fluid d-flex justify-content-evenly dropdowns">
+        <select class="form-select" aria-label="Default select example">
+          <option selected>Tipo</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+        <select class="form-select" aria-label="Default select example">
+          <option selected>Porte</option>
+          <option value="P">P</option>
+          <option value="M">M</option>
+          <option value="G">G</option>
+        </select>
+        <select class="form-select" aria-label="Default select example">
+          <option selected>Raça</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+      </div>
+      <div class="container-fluid d-flex justify-content-center">
+        <div class="container-fluid d-flex animal-card">
+          <div class="d-flex">
+            <img class="foto" src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg" alt="">
+          </div>
+          <div class="infos">
+            <h1>Tobi</h1>
+            <p>Raça: Vira-lata</p>
+            <p>Porte: M</p>
+            <p>Macho</p>
+          </div>
+        </div>
+        <div class="container-fluid d-flex animal-card">
+          <div class="d-flex">
+            <img class="foto" src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg" alt="">
+          </div>
+          <div class="infos">
+            <h1>Tobi</h1>
+            <p>Raça: Vira-lata</p>
+            <p>Porte: M</p>
+            <p>Macho</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
