--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,24 +46,54 @@
           <option value="3">Three</option>
         </select>
       </div>
-      <div class="container-fluid d-flex justify-content-center">
+      <div class="container-fluid d-flex justify-content-center flex-wrap">
         <div class="container-fluid d-flex animal-card">
-          <div class="d-flex">
+          <div class="d-flex container-foto">
             <img class="foto" src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg" alt="">
           </div>
-          <div class="infos">
-            <h1>Tobi</h1>
+          <div class="d-flex flex-column justify-content-center infos">
+            <div class="d-flex justify-content-center align-items-center">
+              <h1>Tobi</h1>
+            </div>
             <p>Raça: Vira-lata</p>
             <p>Porte: M</p>
             <p>Macho</p>
           </div>
         </div>
         <div class="container-fluid d-flex animal-card">
-          <div class="d-flex">
+          <div class="d-flex container-foto">
             <img class="foto" src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg" alt="">
           </div>
-          <div class="infos">
-            <h1>Tobi</h1>
+          <div class="d-flex flex-column justify-content-center infos">
+            <div class="d-flex justify-content-center align-items-center">
+              <h1>Tobi</h1>
+            </div>
+            <p>Raça: Vira-lata</p>
+            <p>Porte: M</p>
+            <p>Macho</p>
+          </div>
+        </div>
+        <div class="container-fluid d-flex animal-card">
+          <div class="d-flex container-foto">
+            <img class="foto" src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg" alt="">
+          </div>
+          <div class="d-flex flex-column justify-content-center infos">
+            <div class="d-flex justify-content-center align-items-center">
+              <h1>Tobi</h1>
+            </div>
+            <p>Raça: Vira-lata</p>
+            <p>Porte: M</p>
+            <p>Macho</p>
+          </div>
+        </div>
+        <div class="container-fluid d-flex animal-card">
+          <div class="d-flex container-foto">
+            <img class="foto" src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg" alt="">
+          </div>
+          <div class="d-flex flex-column justify-content-center infos">
+            <div class="d-flex justify-content-center align-items-center">
+              <h1>Tobi</h1>
+            </div>
             <p>Raça: Vira-lata</p>
             <p>Porte: M</p>
             <p>Macho</p>
