--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,106 +1,142 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Marpetplace</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href='https://fonts.googleapis.com/css?family=Fredoka One' rel='stylesheet'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link href="style.css" rel="stylesheet">
-  </head>
-  <body>
-    <header>
-        <div class="container-fluid d-flex justify-content-between align-items-center background-color-primary header">
-            <div class="d-flex align-items-center pointer">
-                <i class="fa-solid fa-shield-dog header-icon"></i>
-                <h1>MarPetplace</h1>
-            </div>
-            <div class="d-flex align-items-center pointer">
-                <i class="fa-solid fa-person header-icon"></i>
-                <h1>Minha área</h1>
-            </div>
-        </div>
-    </header>
-    <section class="background-color-secondary">
-      <div class="container-fluid d-flex justify-content-center">
-        <h1 class="looking-for-home">Estou procurando um lar</h1>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Marpetplace</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Fredoka One' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link href="style.css" rel="stylesheet">
+</head>
+
+<body>
+  <header>
+    <div class="container-fluid d-flex justify-content-between align-items-center background-color-primary header">
+      <div class="d-flex align-items-center pointer">
+        <i class="fa-solid fa-shield-dog header-icon"></i>
+        <h1>MarPetplace</h1>
       </div>
-      <div class="container-fluid d-flex justify-content-evenly dropdowns">
-        <select class="form-select" aria-label="Default select example">
-          <option selected>Tipo</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
-        </select>
-        <select class="form-select" aria-label="Default select example">
-          <option selected>Porte</option>
-          <option value="P">P</option>
-          <option value="M">M</option>
-          <option value="G">G</option>
-        </select>
-        <select class="form-select" aria-label="Default select example">
-          <option selected>Raça</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
-        </select>
+      <div class="d-flex align-items-center pointer">
+        <i class="fa-solid fa-person header-icon"></i>
+        <h1>Minha área</h1>
       </div>
-      <div class="container-fluid d-flex justify-content-center flex-wrap">
-        <div class="container-fluid d-flex animal-card">
-          <div class="d-flex container-foto">
-            <img class="foto" src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg" alt="">
-          </div>
-          <div class="d-flex flex-column justify-content-center infos">
-            <div class="d-flex justify-content-center align-items-center">
-              <h1>Tobi</h1>
-            </div>
-            <p>Raça: Vira-lata</p>
-            <p>Porte: M</p>
-            <p>Macho</p>
-          </div>
+    </div>
+  </header>
+  <section class="height-main background-color-secondary">
+    <div class="container-fluid d-flex justify-content-center">
+      <h1 class="looking-for-home">Estou procurando um lar</h1>
+    </div>
+    <div class="container-fluid d-flex justify-content-evenly dropdowns">
+      <select class="form-select" aria-label="Default select example">
+        <option selected>Tipo</option>
+        <option value="GATO">Gato</option>
+        <option value="CACHORRO">Cachorro</option>
+      </select>
+      <select class="form-select" aria-label="Default select example">
+        <option selected>Porte</option>
+        <option value="P">P</option>
+        <option value="M">M</option>
+        <option value="G">G</option>
+      </select>
+      <select class="form-select" aria-label="Default select example">
+        <option selected>Raça</option>
+        <option value="VIRA_LATA">Vira-lata</option>
+        <option value="LABRADOR">Labrador</option>
+        <option value="BULDOGUE_FRANCÊS">Buldogue Francês</option>
+        <option value="PASTOR_ALEMÃO">Pastor Alemão</option>
+        <option value="GOLDEN_RETRIEVER">Golden Retriever</option>
+        <option value="BULDOGUE_INGLÊS">Buldogue Inglês</option>
+        <option value="POODLE">Poodle</option>
+        <option value="BEAGLE">Beagle</option>
+        <option value="ROTTWEILER">Rottweiler</option>
+        <option value="YORKSHIRE_TERRIER">Yorkshire Terrier</option>
+        <option value="PERSA">Persa</option>
+        <option value="SIAMES">Siamês</option>
+        <option value="MAINE_COON">Maine Coon</option>
+        <option value="RAGDOLL">Ragdoll</option>
+        <option value="BENGAL">Bengal</option>
+        <option value="SPHYNX">Sphynx</option>
+        <option value="BRITISH_SHORTHAIR">British Shorthair</option>
+        <option value="SCOTTISH_FOLD">Scottish Fold</option>
+        <option value="SIBERIANO">Siberiano</option>
+        <option value="ABISSINIO">Abissínio</option>
+        <option value="OUTRA">Outra</option>
+      </select>
+    </div>
+    <div class="grid">
+      <div class="container-fluid d-flex animal-card">
+        <div class="d-flex container-foto">
+          <img class="foto"
+            src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg"
+            alt="">
         </div>
-        <div class="container-fluid d-flex animal-card">
-          <div class="d-flex container-foto">
-            <img class="foto" src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg" alt="">
+        <div class="d-flex flex-column justify-content-center infos">
+          <div class="d-flex justify-content-center align-items-center">
+            <h1>Tobi</h1>
           </div>
-          <div class="d-flex flex-column justify-content-center infos">
-            <div class="d-flex justify-content-center align-items-center">
-              <h1>Tobi</h1>
-            </div>
-            <p>Raça: Vira-lata</p>
-            <p>Porte: M</p>
-            <p>Macho</p>
-          </div>
+          <p>Raça: Vira-lata</p>
+          <p>Porte: M</p>
+          <p>Macho</p>
         </div>
-        <div class="container-fluid d-flex animal-card">
-          <div class="d-flex container-foto">
-            <img class="foto" src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg" alt="">
-          </div>
-          <div class="d-flex flex-column justify-content-center infos">
-            <div class="d-flex justify-content-center align-items-center">
-              <h1>Tobi</h1>
-            </div>
-            <p>Raça: Vira-lata</p>
-            <p>Porte: M</p>
-            <p>Macho</p>
-          </div>
-        </div>
-        <div class="container-fluid d-flex animal-card">
-          <div class="d-flex container-foto">
-            <img class="foto" src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg" alt="">
-          </div>
-          <div class="d-flex flex-column justify-content-center infos">
-            <div class="d-flex justify-content-center align-items-center">
-              <h1>Tobi</h1>
-            </div>
-            <p>Raça: Vira-lata</p>
-            <p>Porte: M</p>
-            <p>Macho</p>
-          </div>
-        </div>
+        <i class="fa-solid fa-circle-exclamation danger"></i>
       </div>
-    </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+      <div class="container-fluid d-flex animal-card">
+        <div class="d-flex container-foto">
+          <img class="foto"
+            src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg"
+            alt="">
+        </div>
+        <div class="d-flex flex-column justify-content-center infos">
+          <div class="d-flex justify-content-center align-items-center">
+            <h1>Tobi</h1>
+          </div>
+          <p>Raça: Vira-lata</p>
+          <p>Porte: M</p>
+          <p>Macho</p>
+        </div>
+        <i class="fa-solid fa-circle-exclamation danger"></i>
+      </div>
+      <div class="container-fluid d-flex animal-card">
+        <div class="d-flex container-foto">
+          <img class="foto"
+            src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg"
+            alt="">
+        </div>
+        <div class="d-flex flex-column justify-content-center infos">
+          <div class="d-flex justify-content-center align-items-center">
+            <h1>Tobi</h1>
+          </div>
+          <p>Raça: Vira-lata</p>
+          <p>Porte: M</p>
+          <p>Macho</p>
+        </div>
+        <i class="fa-solid fa-circle-exclamation danger"></i>
+      </div>
+      <div class="container-fluid d-flex animal-card">
+        <div class="d-flex container-foto">
+          <img class="foto"
+            src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg"
+            alt="">
+        </div>
+        <div class="d-flex flex-column justify-content-center infos">
+          <div class="d-flex justify-content-center align-items-center">
+            <h1>Tobi</h1>
+          </div>
+          <p>Raça: Vira-lata</p>
+          <p>Porte: M</p>
+          <p>Macho</p>
+        </div>
+        <i class="fa-solid fa-circle-exclamation danger"></i>
+      </div>
+    </div>
+  </section>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
