Anuncio screen and @transactional applied

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,13 +16,14 @@
 <body>
   <header>
     <div class="container-fluid d-flex justify-content-between align-items-center background-color-primary header">
-      <div class="d-flex align-items-center pointer">
+      <div class="d-flex align-items-center pointer" title="Home">
         <i class="fa-solid fa-shield-dog header-icon"></i>
         <h1>MarPetplace</h1>
       </div>
-      <div class="d-flex align-items-center pointer">
+      <div class="d-flex align-items-center pointer" title="Minha área">
         <i class="fa-solid fa-person header-icon"></i>
         <h1>Minha área</h1>
+        <i class="fa-solid fa-right-from-bracket header-icon logout" title="Logout"></i>
       </div>
     </div>
   </header>
