--- a/frontend/admin/ativos.html
+++ b/frontend/admin/ativos.html
@@ -28,12 +28,26 @@
         </div>
     </header>
     <section class="height-main background-color-secondary container-fluid d-flex">
-        <section class="d-flex flex-column">
-            <div>
+        <section class="d-flex flex-column side-menu">
+            <div class="d-flex align-items-center justify-content-center active">
+                <i class="fa-solid fa-check"></i>
                 <p>Ativos</p>
             </div>
-            <div>
+            <div class="d-flex align-items-center justify-content-center">
+                <i class="fa-solid fa-circle-exclamation"></i>
                 <p>Denúncias</p>
+            </div>
+            <div class="d-flex align-items-center justify-content-center">
+                <i class="fa-solid fa-eye"></i>
+                <p>Recursos</p>
+            </div>
+            <div class="d-flex align-items-center justify-content-center">
+                <i class="fa-solid fa-triangle-exclamation"></i>
+                <p>Denunciados</p>
+            </div>
+            <div class="d-flex align-items-center justify-content-center">
+                <i class="fa-solid fa-user-slash"></i>
+                <p>Desativados</p>
             </div>
         </section>
         <section>
@@ -89,7 +103,6 @@
                         <p>Porte: M</p>
                         <p>Macho</p>
                     </div>
-                    <i class="fa-solid fa-circle-exclamation danger"></i>
                 </div>
                 <div class="container-fluid d-flex animal-card">
                     <div class="d-flex container-foto">
@@ -105,7 +118,6 @@
                         <p>Porte: M</p>
                         <p>Macho</p>
                     </div>
-                    <i class="fa-solid fa-circle-exclamation danger"></i>
                 </div>
                 <div class="container-fluid d-flex animal-card">
                     <div class="d-flex container-foto">
@@ -121,7 +133,6 @@
                         <p>Porte: M</p>
                         <p>Macho</p>
                     </div>
-                    <i class="fa-solid fa-circle-exclamation danger"></i>
                 </div>
                 <div class="container-fluid d-flex animal-card">
                     <div class="d-flex container-foto">
@@ -137,7 +148,6 @@
                         <p>Porte: M</p>
                         <p>Macho</p>
                     </div>
-                    <i class="fa-solid fa-circle-exclamation danger"></i>
                 </div>
             </div>
         </section>
