Last admin screen ok

--- a/frontend/anuncios.html
+++ b/frontend/anuncios.html
@@ -16,13 +16,15 @@
 <body>
     <header>
         <div class="container-fluid d-flex justify-content-between align-items-center background-color-primary header">
-            <div class="d-flex align-items-center pointer" title="Home">
+            <div id="home" class="d-flex align-items-center pointer" title="Home">
                 <i class="fa-solid fa-shield-dog header-icon"></i>
                 <h1>MarPetplace</h1>
             </div>
             <div class="d-flex align-items-center pointer" title="Minha área">
-                <i class="fa-solid fa-person header-icon"></i>
-                <h1>Minha área</h1>
+                <div id="minhaArea" class="d-flex align-items-center">
+                    <i class="fa-solid fa-person header-icon"></i>
+                    <h1>Minha área</h1>
+                </div>
                 <i class="fa-solid fa-right-from-bracket header-icon logout" title="Logout"></i>
             </div>
         </div>
@@ -63,7 +65,10 @@
             </div>
         </div>
     </section>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+    <script src="js/user.js"></script>
 </body>
 
 </html>
