--- a/frontend/cadastro-anuncio.html
+++ b/frontend/cadastro-anuncio.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="container-fluid d-flex justify-content-between align-items-center background-color-primary header">
-            <div class="d-flex align-items-center pointer" title="Home">
+            <div id="home" class="d-flex align-items-center pointer" title="Home">
                 <i class="fa-solid fa-shield-dog header-icon"></i>
                 <h1>MarPetplace</h1>
             </div>
@@ -144,7 +144,7 @@
                                 <option value="F">Fêmea</option>
                             </select>
                         </div>
-                        
+
                     </div>
                     <div class="form-check form-switch">
                         <input type="checkbox" class="form-check-input" role="switch" id="checkboxCastrado">
@@ -156,7 +156,7 @@
                     </div>
                     <div class="d-flex justify-content-evenly btn-group">
                         <button class="btn-cadastro">Ocultar anúncio</button>
-                    <button class="btn-cadastro">Salvar</button>
+                        <button class="btn-cadastro">Salvar</button>
                     </div>
                 </div>
             </form>
@@ -164,6 +164,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
+        <script src="js/user.js"></script>
 </body>
 
 </html>
