--- a/frontend/cadastro-anuncio.html
+++ b/frontend/cadastro-anuncio.html
@@ -83,8 +83,8 @@
                         <input required type="text" class="form-control" id="inputNome">
                     </div>
                     <div class="form-group">
-                        <label for="inputContato">Contato (FAZER MASCARA DEPOIS)</label>
-                        <input required type="tel" data-mask="(00) 0000-0000" data-mask-selectonfocus="true"
+                        <label for="inputContato">Contato</label>
+                        <input required type="tel" placeholder="(99) 99999-9999"
                             class="form-control" id="inputContato">
                     </div>
                     <div class="form-group">
@@ -122,7 +122,7 @@
                 <div class="container-fluid">
                     <div class="form-group">
                         <label class="form-check-label" for="inputFoto">Foto</label>
-                        <input type="file" class="form-control" id="inputFoto" aria-label="Upload">
+                        <input type="file" class="form-control" id="inputFoto" aria-label="Upload" accept="image/*">
                     </div>
                     <div class="container-select-cadastro">
                         <label class="form-check-label labelCaracteristicas">Características</label>
@@ -165,6 +165,7 @@
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
         <script src="js/user.js"></script>
+        <script src="js/cadastro-anuncio.js"></script>
 </body>
 
 </html>
