JS de 3 telas e algumas alterações no backend

--- a/frontend/admin/recursos.html
+++ b/frontend/admin/recursos.html
@@ -29,23 +29,23 @@
     </header>
     <section class="height-main background-color-secondary container-fluid d-flex">
         <section class="d-flex flex-column side-menu">
-            <div class="d-flex align-items-center justify-content-center">
+            <div id="ativos" class="d-flex align-items-center justify-content-center ">
                 <i class="fa-solid fa-check"></i>
                 <p>Ativos</p>
             </div>
-            <div class="d-flex align-items-center justify-content-center">
+            <div id="denuncias" class="d-flex align-items-center justify-content-center">
                 <i class="fa-solid fa-circle-exclamation"></i>
                 <p>Denúncias</p>
             </div>
-            <div class="d-flex align-items-center justify-content-center active">
+            <div id="recursos" class="d-flex align-items-center justify-content-center active">
                 <i class="fa-solid fa-eye"></i>
                 <p>Recursos</p>
             </div>
-            <div class="d-flex align-items-center justify-content-center">
+            <div id="denunciados" class="d-flex align-items-center justify-content-center">
                 <i class="fa-solid fa-triangle-exclamation"></i>
                 <p>Denunciados</p>
             </div>
-            <div class="d-flex align-items-center justify-content-center">
+            <div id="desativados" class="d-flex align-items-center justify-content-center">
                 <i class="fa-solid fa-user-slash"></i>
                 <p>Desativados</p>
             </div>
