--- a/frontend/admin/denuncias.html
+++ b/frontend/admin/denuncias.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="container-fluid d-flex justify-content-between align-items-center background-color-primary header">
-            <div class="d-flex align-items-center pointer" title="Home">
+            <div id="home" class="d-flex align-items-center pointer" title="Home">
                 <i class="fa-solid fa-shield-dog header-icon"></i>
                 <h1>MarPetplace</h1>
             </div>
@@ -29,23 +29,23 @@
     </header>
     <section class="height-main background-color-secondary container-fluid d-flex">
         <section class="d-flex flex-column side-menu">
-            <div class="d-flex align-items-center justify-content-center">
+            <div id="ativos" class="d-flex align-items-center justify-content-center ">
                 <i class="fa-solid fa-check"></i>
                 <p>Ativos</p>
             </div>
-            <div class="d-flex align-items-center justify-content-center active">
+            <div id="denuncias" class="d-flex align-items-center justify-content-center active">
                 <i class="fa-solid fa-circle-exclamation"></i>
                 <p>Denúncias</p>
             </div>
-            <div class="d-flex align-items-center justify-content-center">
+            <div id="recursos" class="d-flex align-items-center justify-content-center">
                 <i class="fa-solid fa-eye"></i>
                 <p>Recursos</p>
             </div>
-            <div class="d-flex align-items-center justify-content-center">
+            <div id="denunciados" class="d-flex align-items-center justify-content-center">
                 <i class="fa-solid fa-triangle-exclamation"></i>
                 <p>Denunciados</p>
             </div>
-            <div class="d-flex align-items-center justify-content-center">
+            <div id="desativados" class="d-flex align-items-center justify-content-center">
                 <i class="fa-solid fa-user-slash"></i>
                 <p>Desativados</p>
             </div>
@@ -113,6 +113,9 @@
         crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script type="module" src="js/admin.js"></script>
+    <script type="module" src="js/denuncias.js"></script>
+    <script type="module" src="../js/requests.js"></script>
 </body>
 
 </html>
