--- a/frontend/admin/desativados.html
+++ b/frontend/admin/desativados.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="container-fluid d-flex justify-content-between align-items-center background-color-primary header">
-            <div class="d-flex align-items-center pointer" title="Home">
+            <div id="home" class="d-flex align-items-center pointer" title="Home">
                 <i class="fa-solid fa-shield-dog header-icon"></i>
                 <h1>MarPetplace</h1>
             </div>
@@ -29,53 +29,36 @@
     </header>
     <section class="height-main background-color-secondary container-fluid d-flex">
         <section class="d-flex flex-column side-menu">
-            <div class="d-flex align-items-center justify-content-center">
+            <div id="ativos" class="d-flex align-items-center justify-content-center ">
                 <i class="fa-solid fa-check"></i>
                 <p>Ativos</p>
             </div>
-            <div class="d-flex align-items-center justify-content-center">
+            <div id="denuncias" class="d-flex align-items-center justify-content-center">
                 <i class="fa-solid fa-circle-exclamation"></i>
                 <p>Denúncias</p>
             </div>
-            <div class="d-flex align-items-center justify-content-center">
+            <div id="recursos" class="d-flex align-items-center justify-content-center">
                 <i class="fa-solid fa-eye"></i>
                 <p>Recursos</p>
             </div>
-            <div class="d-flex align-items-center justify-content-center">
+            <div id="denunciados" class="d-flex align-items-center justify-content-center">
                 <i class="fa-solid fa-triangle-exclamation"></i>
                 <p>Denunciados</p>
             </div>
-            <div class="d-flex align-items-center justify-content-center active">
+            <div id="desativados" class="d-flex align-items-center justify-content-center active">
                 <i class="fa-solid fa-user-slash"></i>
                 <p>Desativados</p>
             </div>
         </section>
         <section class="container-fluid table-admin">
-            <div class="d-flex align-items-center justify-content-between">
-                <h2>Nome</h2>
-                <h2>E-mail</h2>
-                <h2></h2>
-            </div>
-            <div class="d-flex align-items-center justify-content-between">
-                <p>Gabriel</p>
-                <p>gabrielg737@gmail.com</p>
-                <button type="button" class="btn btn-primary btn-reativar">Reativar</button>    
-            </div>
-            <div class="d-flex align-items-center justify-content-between">
-                <p>Gabriel</p>
-                <p>gabrielg737@gmail.com</p>
-                <button type="button" class="btn btn-primary btn-reativar">Reativar</button>    
-            </div>
-            <div class="d-flex align-items-center justify-content-between">
-                <p>Gabriel</p>
-                <p>gabrielg737@gmail.com</p>
-                <button type="button" class="btn btn-primary btn-reativar">Reativar</button>    
-            </div>
         </section>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script type="module" src="js/admin.js"></script>
+    <script type="module" src="js/desativados.js"></script>
+    <script type="module" src="../js/requests.js"></script>
 </body>
 
 </html>
