--- a/frontend/anuncios.html
+++ b/frontend/anuncios.html
@@ -68,8 +68,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
-    <script src="js/user.js"></script>
-    <script src="js/anuncios.js"></script>
+    <script type="module" src="js/user.js"></script>
+    <script type="module" src="js/requests.js"></script>
+    <script type="module" src="js/anuncios.js"></script>
+    
 </body>
 
 </html>
