--- a/frontend/anuncios.html
+++ b/frontend/anuncios.html
@@ -11,6 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="style.css" rel="stylesheet">
+    <link rel="icon" href="./favicon.png">
 </head>
 
 <body>
