--- a/frontend/admin/cadastro-admin.html
+++ b/frontend/admin/cadastro-admin.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="../cadastro-usuario.css">
-    <link rel="icon" href="./favicon.png">
+    <link rel="icon" href="../favicon.png">
 </head>
 
 <body>
